fix: spacing

--- a/components/pages/LandingPage/LandingComponents/SponsorsLine/SponsorsLine.module.css
+++ b/components/pages/LandingPage/LandingComponents/SponsorsLine/SponsorsLine.module.css
@@ -126,7 +126,7 @@ html[class~=dark] .gradient-left {
 }
 
 .gold {
-  grid-template-rows: repeat(2, 123px);
+  grid-template-rows: repeat(2, 112px);
   grid-auto-columns: 90px;
   grid-gap: 10px;
 }
